se cambio la version para el RELEASE a QA y se actualizo el doc de instalacion.

--- a/source/backend/pom.xml
+++ b/source/backend/pom.xml
@@ -5,7 +5,7 @@
 	
 	<groupId>ar.gob.buenosaires.backend</groupId>
 	<artifactId>proyectosBA</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1-RELEASE</version>
 	<packaging>pom</packaging>
 	
 	<name>Proyectos BA</name>
