--- a/source/backend/proyectosBA-Utility/pom.xml
+++ b/source/backend/proyectosBA-Utility/pom.xml
@@ -2,14 +2,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<artifactId>proyectosBA-Utility</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1-RELEASE</version>
     <packaging>jar</packaging>
 	<name>Proyectos BA - Utility</name>
 	
 	<parent>
 		<groupId>ar.gob.buenosaires.backend</groupId>
 		<artifactId>proyectosBA</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1-RELEASE</version>
 	</parent>
 
 	<properties>
