--- a/source/backend/proyectosBA-DS/pom.xml
+++ b/source/backend/proyectosBA-DS/pom.xml
@@ -17,8 +17,9 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
+		<tomcat.version>7.0.54</tomcat.version>
 		<utility.version>0.0.1-RELEASE</utility.version>
-		<jaxrs.version>2.6.3</jaxrs.version>
+		<jaxrs.version>2.6.3</jaxrs.version>		
 		<nimbusjwt.version>4.16.2</nimbusjwt.version>
 		<!-- Test -->
 		<testng.version>6.9.10</testng.version>
