--- a/source/configuracion/be/application.properties
+++ b/source/configuracion/be/application.properties
@@ -1,5 +1,5 @@
 #perfil
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 #Security
 security.user.password=esteban
@@ -27,7 +27,7 @@ spring.jpa.properties.hibernate.cache.generate_statistics=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 #ESB
-esb.producer.timeout=10000
+esb.producer.timeout=6000
 esb.producer.replyToDestination=esb.response.queue
 esb.producer.destination=esb.request.queue
 esb.jmsTemplate.topic=false
