--- a/source/backend/proyectosBA-DS/src/main/resources/importador.properties
+++ b/source/backend/proyectosBA-DS/src/main/resources/importador.properties
@@ -1,6 +1,6 @@
 #specific properties for importa poject feature
 proyecto.fila.col.nombres = 4
-proyecto.fila.inicio.importacion = 4
+#proyecto.fila.inicio.importacion = 5
 proyecto.col.4.0.nombre = Nombre de Proyecto
 proyecto.col.4.1.nombre = Objetivo estratégico
 proyecto.col.4.2.nombre = Objetivo operativo
@@ -25,58 +25,62 @@ proyecto.col.4.20.nombre = Fecha Inicio
 proyecto.col.4.21.nombre = Fecha Fin
 proyecto.col.4.22.nombre = 1er año
 proyecto.col.4.23.nombre = Presupuesto 1er Año
-proyecto.col.4.24.nombre = 2do Año
-proyecto.col.4.25.nombre = Presupuesto 2do Año
-proyecto.col.4.26.nombre = 3er Año
-proyecto.col.4.27.nombre = Presupuesto 3er Año
-proyecto.col.4.28.nombre = 4to Año
-proyecto.col.4.29.nombre = Presupuesto 4to Año
-proyecto.col.4.30.nombre = Total
-proyecto.col.4.31.nombre = Tipo de proyecto
-proyecto.col.4.32.nombre = Eje 1
-proyecto.col.4.33.nombre = Eje 2
-proyecto.col.4.34.nombre = Eje 3
-proyecto.col.4.35.nombre = Implica Cambio Legislativo
-proyecto.col.4.36.nombre = Prioridad Jurisdiccional
+proyecto.col.4.24.nombre = Otras fuentes 1er Año
+proyecto.col.4.25.nombre = 2do Año
+proyecto.col.4.26.nombre = Presupuesto 2do Año
+proyecto.col.4.27.nombre = Otras fuentes 2do Año
+proyecto.col.4.28.nombre = 3er Año
+proyecto.col.4.29.nombre = Presupuesto 3er Año
+proyecto.col.4.30.nombre = Otras fuentes 3er Año
+proyecto.col.4.31.nombre = 4to Año
+proyecto.col.4.32.nombre = Presupuesto 4to Año
+proyecto.col.4.33.nombre = Otras fuentes 4to Año
+proyecto.col.4.34.nombre = Total solicitado GCBA
+proyecto.col.4.35.nombre = Tipo de proyecto
+proyecto.col.4.36.nombre = Eje 1
+proyecto.col.4.37.nombre = Eje 2
+proyecto.col.4.38.nombre = Eje 3
+proyecto.col.4.39.nombre = Implica Cambio Legislativo
+proyecto.col.4.40.nombre = Prioridad Jurisdiccional
 
 #Numero de columna seguen el nombre de la misma
-proyecto.nombre.de.proyecto = 0
-proyecto.objetivo.estratégico = 1
-proyecto.objetivo.operativo = 2
-proyecto.descripción = 3
-proyecto.meta = 4
-proyecto.unidad.de.la.meta = 5
-proyecto.cantidad = 6
-proyecto.segmento.1 = 7
-proyecto.segmento.2 = 8
-proyecto.segmento.3 = 9
-proyecto.segmento.4 = 10
-proyecto.nombre.y.apellido.lider.de.proyecto = 11
-proyecto.area = 12
-proyecto.corresponsables = 13
-proyecto.tipo.de.ubicación = 14
-proyecto.dirección = 15
-proyecto.1ra.comuna = 16
-proyecto.2da.comuna = 17
-proyecto.3ra.comuna = 18
-proyecto.4ta.comuna = 19
-proyecto.fecha.inicio = 20
-proyecto.fecha.fin = 21
-proyecto.1er.año = 22
-proyecto.presupuesto.1er.año = 23
-proyecto.2do.año = 24
-proyecto.presupuesto.2do.año = 25
-proyecto.3er.año = 26
-proyecto.presupuesto.3er.año = 27
-proyecto.4to.año = 28
-proyecto.presupuesto.4to.año = 29
-proyecto.total = 30
-proyecto.tipo.de.proyecto = 31
-proyecto.eje.1 = 32
-proyecto.eje.2 = 33
-proyecto.eje.3 = 34
-proyecto.implica.cambio.legislativo = 35
-proyecto.prioridad.jurisdiccional = 36
+#proyecto.nombre.de.proyecto = 0
+#proyecto.objetivo.estratégico = 1
+#proyecto.objetivo.operativo = 2
+#proyecto.descripción = 3
+#proyecto.meta = 4
+#proyecto.unidad.de.la.meta = 5
+#proyecto.cantidad = 6
+#proyecto.segmento.1 = 7
+#proyecto.segmento.2 = 8
+#proyecto.segmento.3 = 9
+#proyecto.segmento.4 = 10
+#proyecto.nombre.y.apellido.lider.de.proyecto = 11
+#proyecto.area = 12
+#proyecto.corresponsables = 13
+#proyecto.tipo.de.ubicación = 14
+#proyecto.dirección = 15
+#proyecto.1ra.comuna = 16
+#proyecto.2da.comuna = 17
+#proyecto.3ra.comuna = 18
+#proyecto.4ta.comuna = 19
+#proyecto.fecha.inicio = 20
+#proyecto.fecha.fin = 21
+#proyecto.1er.año = 22
+#proyecto.presupuesto.1er.año = 23
+#proyecto.2do.año = 24
+#proyecto.presupuesto.2do.año = 25
+#proyecto.3er.año = 26
+#proyecto.presupuesto.3er.año = 27
+#proyecto.4to.año = 28
+#proyecto.presupuesto.4to.año = 29
+#proyecto.total = 30
+#proyecto.tipo.de.proyecto = 31
+#proyecto.eje.1 = 32
+#proyecto.eje.2 = 33
+#proyecto.eje.3 = 34
+#proyecto.implica.cambio.legislativo = 35
+#proyecto.prioridad.jurisdiccional = 36
 
 #numero de las columnas para validar campos vacios
 #columna proyecto
@@ -90,3 +94,10 @@ proyecto.col.numero = 2
 proyecto.col.fecha.inicio.numero = 20
 #columna fecha fin
 proyecto.col.fecha.fin.numero = 21
+
+#Total de celdas en una fila de 0 a 42
+proyecto.total.celdas = 42
+
+#Numero de celda codigo objetivos
+proyecto.num.celda.oj = 41
+proyecto.num.celda.oop = 42
