--- a/source/configuracion/ui/proyectosba.conf
+++ b/source/configuracion/ui/proyectosba.conf
@@ -20,6 +20,8 @@
     RewriteRule (.*) https://%{SERVER_NAME}/%$1 [R,L]
 
   </Directory>
+  ## para que muestre en el log a donde se estan haciendo los redirect
+  # LogLevel debug rewrite:trace41
   ErrorLog /var/log/httpd/proyectosba.log
   CustomLog /var/log/httpd/proyectosba.log combined
 </VirtualHost>
