--- a/source/backend/proyectosBA-DS/src/main/resources/importador.properties
+++ b/source/backend/proyectosBA-DS/src/main/resources/importador.properties
@@ -1,4 +1,26 @@
 #specific properties for importa poject feature
+#Numeros de columnas y valores para los combos
+proyecto.col.segmento.numero.inicio = 7
+proyecto.col.segmento.numero.fin = 10
+proyecto.col.area.numero.inicio = 12
+proyecto.col.area.numero.fin = 12
+proyecto.col.tipoUbicacion.opciones = Comunas,Dirección,Sin Definir,No Corresponde
+proyecto.col.tipoUbicacion.numero.inicio = 14
+proyecto.col.tipoUbicacion.numero.fin = 14
+proyecto.col.comuna.numero.inicio = 16
+proyecto.col.comuna.numero.fin = 19
+proyecto.col.tipoProyecto.opciones = Nuevo,Ampliación
+proyecto.col.tipoProyecto.numero.inicio = 35
+proyecto.col.tipoProyecto.numero.fin = 35
+proyecto.col.ejeGobierno.numero.inicio = 36
+proyecto.col.ejeGobierno.numero.fin = 38
+proyecto.col.implicaCambioLegislativo.opciones = Si,No
+proyecto.col.implicaCambioLegislativo.numero.inicio = 39
+proyecto.col.implicaCambioLegislativo.numero.fin = 39
+proyecto.col.prioridadJurisdiccional.opciones = 1.Alta,2.Media,3.Baja
+proyecto.col.prioridadJurisdiccional.numero.inicio = 40
+proyecto.col.prioridadJurisdiccional.numero.fin = 40
+
 proyecto.fila.col.nombres = 4
 #proyecto.fila.inicio.importacion = 5
 proyecto.col.4.0.nombre = Nombre de Proyecto
@@ -43,45 +65,6 @@ proyecto.col.4.38.nombre = Eje 3
 proyecto.col.4.39.nombre = Implica Cambio Legislativo
 proyecto.col.4.40.nombre = Prioridad Jurisdiccional
 
-#Numero de columna seguen el nombre de la misma
-#proyecto.nombre.de.proyecto = 0
-#proyecto.objetivo.estratégico = 1
-#proyecto.objetivo.operativo = 2
-#proyecto.descripción = 3
-#proyecto.meta = 4
-#proyecto.unidad.de.la.meta = 5
-#proyecto.cantidad = 6
-#proyecto.segmento.1 = 7
-#proyecto.segmento.2 = 8
-#proyecto.segmento.3 = 9
-#proyecto.segmento.4 = 10
-#proyecto.nombre.y.apellido.lider.de.proyecto = 11
-#proyecto.area = 12
-#proyecto.corresponsables = 13
-#proyecto.tipo.de.ubicación = 14
-#proyecto.dirección = 15
-#proyecto.1ra.comuna = 16
-#proyecto.2da.comuna = 17
-#proyecto.3ra.comuna = 18
-#proyecto.4ta.comuna = 19
-#proyecto.fecha.inicio = 20
-#proyecto.fecha.fin = 21
-#proyecto.1er.año = 22
-#proyecto.presupuesto.1er.año = 23
-#proyecto.2do.año = 24
-#proyecto.presupuesto.2do.año = 25
-#proyecto.3er.año = 26
-#proyecto.presupuesto.3er.año = 27
-#proyecto.4to.año = 28
-#proyecto.presupuesto.4to.año = 29
-#proyecto.total = 30
-#proyecto.tipo.de.proyecto = 31
-#proyecto.eje.1 = 32
-#proyecto.eje.2 = 33
-#proyecto.eje.3 = 34
-#proyecto.implica.cambio.legislativo = 35
-#proyecto.prioridad.jurisdiccional = 36
-
 #numero de las columnas para validar campos vacios
 #columna proyecto
 proyecto.col.numero = 0
@@ -101,3 +84,46 @@ proyecto.total.celdas = 42
 #Numero de celda codigo objetivos
 proyecto.num.celda.oj = 41
 proyecto.num.celda.oop = 42
+
+#PROPIEDADES PARA LA IMPORTACION DE PROYECTOS PRIORIZADOS
+proyecto.priorizado.col.1.0.nombre = Jurisdicción
+proyecto.priorizado.col.1.1.nombre = ID proyecto
+proyecto.priorizado.col.1.2.nombre = Nombre de Proyecto
+proyecto.priorizado.col.1.3.nombre = Estado
+proyecto.priorizado.col.1.4.nombre = Objetivo estratégico
+proyecto.priorizado.col.1.5.nombre = Objetivo operativo
+proyecto.priorizado.col.1.6.nombre = Descripción de Proyecto
+proyecto.priorizado.col.1.7.nombre = Responsable
+proyecto.priorizado.col.1.8.nombre = Área
+proyecto.priorizado.col.1.9.nombre = Organismos corresponsables
+proyecto.priorizado.col.1.10.nombre = Fecha Inicio
+proyecto.priorizado.col.1.11.nombre = Fecha Fin
+proyecto.priorizado.col.1.12.nombre = Tipo de proyecto
+proyecto.priorizado.col.1.13.nombre = Implica Cambio Legislativo
+proyecto.priorizado.col.1.14.nombre = Prioridad Jurisdiccional
+proyecto.priorizado.col.1.15.nombre = Meta
+proyecto.priorizado.col.1.16.nombre = Unidad de la Meta
+proyecto.priorizado.col.1.17.nombre = Cantidad población impactada
+proyecto.priorizado.col.1.18.nombre = Presupuesto 2017
+proyecto.priorizado.col.1.19.nombre = Presupuesto total
+proyecto.priorizado.col.1.20.nombre = Presupuesto aprobado total
+proyecto.priorizado.col.1.21.nombre = Prioridad de jefatura
+proyecto.priorizado.col.1.22.nombre = Estado de aprobación
+
+#Otros
+proyecto.priorizado.num.fila.headers = 1
+proyecto.priorizado.num.celda.idproyecto = 1
+proyecto.priorizado.num.celda.nombreProyecto = 2
+proyecto.priorizado.num.celda.fechaInicio = 10
+proyecto.priorizado.num.celda.fechaFin = 11
+
+#Aprobación		
+proyecto.priorizado.num.celda.presupuestoAprobadoTotal = 20
+proyecto.priorizado.num.celda.prioridadJefatura = 21
+proyecto.priorizado.num.celda.estadoAprobacion = 22
+proyecto.priorizado.opciones.prioridadJefatura = A+,A,B,C
+proyecto.priorizado.opciones.estadoAprobacion =  Pre Aprobado,Demorado,Rechazado
+
+#Presupuesto solicitado	
+proyecto.priorizado.num.celda.presupuestoAnio = 18
+proyecto.priorizado.num.celda.presupuestoTotal = 19
