actualizacion del campo para que acepte mayor cantidad de digitos

--- a/source/backend/proyectosBA-DS/src/main/resources/importador.properties
+++ b/source/backend/proyectosBA-DS/src/main/resources/importador.properties
@@ -1,5 +1,7 @@
 #specific properties for importa poject feature
 #Numeros de columnas y valores para los combos
+proyecto.col.objetivoJurisdiccional.numero.inicio = 1
+proyecto.col.objetivoJurisdiccional.numero.fin = 1
 proyecto.col.segmento.numero.inicio = 7
 proyecto.col.segmento.numero.fin = 10
 proyecto.col.area.numero.inicio = 12
