se agrego la opcion para que no se puede acceder a las subcarpetas de la app angular.

--- a/source/configuracion/ui/proyectosba.conf
+++ b/source/configuracion/ui/proyectosba.conf
@@ -7,6 +7,7 @@
 
   DocumentRoot /var/www/html/proyectosba
   <Directory /var/www/html/proyectosba>
+    Options FollowSymLinks
     RewriteEngine on
     # Don't rewrite files or directories
     RewriteCond %{REQUEST_FILENAME} -f [OR]
