--- a/source/backend/proyectosBA-BE/pom.xml
+++ b/source/backend/proyectosBA-BE/pom.xml
@@ -3,21 +3,22 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<groupId>ar.gob.buenosaires.backend</groupId>
 	<artifactId>proyectosBA-BE</artifactId>
-	<version>1.3.0-RELEASE</version>
+	<version>2.0.0-RELEASE</version>
 	<packaging>jar</packaging>
 	<name>Proyectos BA - Back end</name>
 
 	<parent>
 		<groupId>ar.gob.buenosaires.backend</groupId>
 		<artifactId>proyectosBA</artifactId>
-		<version>1.3.0-RELEASE</version>
+		<version>2.0.0-RELEASE</version>
 	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
-		<utility.version>1.3.0-RELEASE</utility.version>
+		<utility.version>2.0.0-RELEASE</utility.version>
 		<mariadb.version>1.4.4</mariadb.version>
 		<spring-boot-starter.version>1.3.3.RELEASE</spring-boot-starter.version>
 		<!-- Test -->
