--- a/source/backend/proyectosBA-DS/pom.xml
+++ b/source/backend/proyectosBA-DS/pom.xml
@@ -3,22 +3,23 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<groupId>ar.gob.buenosaires.backend</groupId>
 	<artifactId>proyectosBA-DS</artifactId>
-	<version>1.3.0-RELEASE</version>
+	<version>2.0.0-RELEASE</version>
 	<packaging>war</packaging>
 	<name>Proyectos BA - Data services</name>
 
 	<parent>
 		<groupId>ar.gob.buenosaires.backend</groupId>
 		<artifactId>proyectosBA</artifactId>
-		<version>1.3.0-RELEASE</version>
+		<version>2.0.0-RELEASE</version>
 	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<tomcat.version>7.0.54</tomcat.version>
-		<utility.version>1.3.0-RELEASE</utility.version>
+		<utility.version>2.0.0-RELEASE</utility.version>
 		<jaxrs.version>2.6.3</jaxrs.version>
 		<nimbusjwt.version>4.16.2</nimbusjwt.version>
 		<!-- Test -->
@@ -28,16 +29,16 @@
 	</properties>
 
 	<dependencies>
-	 <dependency>
+		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
 			<version>3.14</version>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.apache.poi</groupId> -->
-<!-- 			<artifactId>poi</artifactId> -->
-<!-- 			<version>3.14</version> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.apache.poi</groupId> -->
+		<!-- <artifactId>poi</artifactId> -->
+		<!-- <version>3.14</version> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>ar.gob.buenosaires.backend</groupId>
 			<artifactId>proyectosBA-Utility</artifactId>
@@ -49,10 +50,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-           <dependency>
-               <groupId>org.springframework.ws</groupId>
-               <artifactId>spring-ws-core</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.springframework.ws</groupId>
+			<artifactId>spring-ws-core</artifactId>
+		</dependency>
 		<!-- <dependency> -->
 		<!-- <groupId>org.springframework.boot</groupId> -->
 		<!-- <artifactId>spring-boot-starter-tomcat</artifactId> -->
@@ -71,14 +72,14 @@
 			<version>${jaxrs.version}</version>
 			<scope>compile</scope>
 		</dependency>
-		
+
 		<!--JWT -->
 		<dependency>
-		    <groupId>com.nimbusds</groupId>
-		    <artifactId>nimbus-jose-jwt</artifactId>
-		    <version>${nimbusjwt.version}</version>
+			<groupId>com.nimbusds</groupId>
+			<artifactId>nimbus-jose-jwt</artifactId>
+			<version>${nimbusjwt.version}</version>
 		</dependency>
-		
+
 		<!-- Test -->
 		<dependency>
 			<groupId>org.testng</groupId>
@@ -86,18 +87,23 @@
 			<version>${testng.version}</version>
 			<scope>test</scope>
 		</dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>${mockito.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.easytesting</groupId>
-            <artifactId>fest-assert-core</artifactId>
-            <version>${fest-assert.version}</version>
-            <scope>test</scope>
-        </dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>${mockito.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.easytesting</groupId>
+			<artifactId>fest-assert-core</artifactId>
+			<version>${fest-assert.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
