--- a/source/configuracion/be/application.properties.dist
+++ b/source/configuracion/be/application.properties.dist
@@ -25,6 +25,7 @@ spring.jpa.properties.hibernate.cache.generate_statistics=true
 
 #hibernate
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#spring.jpa.properties.hibernate.generate_statistics=true
 
 #ESB
 esb.producer.timeout=10000
