--- a/source/configuracion/be/application.properties.dist
+++ b/source/configuracion/be/application.properties.dist
@@ -31,6 +31,7 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 esb.producer.timeout=10000
 esb.producer.replyToDestination=esb.response.queue
 esb.producer.destination=esb.request.queue
+esb.consumer.listeners.cantidad=10
 esb.jmsTemplate.topic=false
 esb.pooledConnection.clientID=pbaBE-clientId
 esb.pooledConnecttion.brokerURL=tcp://localhost:61616
